# pure_python_packager

./: README.md  pyproject.toml  todo.md
main/: setup.py
main/pure_python_packager/__dependencies__/__sources__/blissful_basics/: .gitrepo  README.md  pyproject.toml
main/pure_python_packager/__dependencies__/__sources__/blissful_basics/main/: setup.py
main/pure_python_packager/__dependencies__/__sources__/blissful_basics/main/blissful_basics/: __init__.py  settings.json
main/pure_python_packager/__dependencies__/__sources__/blissful_basics/main/blissful_basics/__dependencies__/: file_system_py  json_fix  super_hash  super_map
main/pure_python_packager/__dependencies__/__sources__/blissful_basics/main/blissful_basics/__dependencies__/__sources__/file_system_py/: pyproject.toml
main/pure_python_packager/__dependencies__/__sources__/blissful_basics/main/blissful_basics/__dependencies__/__sources__/super_hash/main/: setup.py
main/pure_python_packager/__dependencies__/__sources__/blissful_basics/main/blissful_basics/__dependencies__/__sources__/super_map/: .gitrepo
main/pure_python_packager/__dependencies__/__sources__/blissful_basics/main/blissful_basics/__dependencies__/__sources__/super_map/main/: setup.py
main/pure_python_packager/__dependencies__/__sources__/blissful_basics/settings/extensions/nix/: nix.toml
main/pure_python_packager/__dependencies__/__sources__/blissful_basics/test/: print_end.py
main/pure_python_packager/__dependencies__/__sources__/file_system_py/: .gitrepo  README.md  pyproject.toml
main/pure_python_packager/__dependencies__/__sources__/file_system_py/main/: setup.py
main/pure_python_packager/__dependencies__/__sources__/file_system_py/main/file_system_py/: __init__.py
main/pure_python_packager/__dependencies__/__sources__/file_system_py/tests/: main.py
main/pure_python_packager/__dependencies__/__sources__/quik_config/: .gitrepo  README.md  pyproject.toml
main/pure_python_packager/__dependencies__/__sources__/quik_config/main/: info.yaml
main/pure_python_packager/__dependencies__/__sources__/quik_config/main/quik_config/: __init__.py  main.py  settings.json
main/pure_python_packager/__dependencies__/__sources__/quik_config/main/quik_config/__dependencies__/: ez_yaml  super_map  walk_up
main/pure_python_packager/__dependencies__/__sources__/quik_config/main/quik_config/__dependencies__/__sources__/ez_yaml/: .gitrepo
main/pure_python_packager/__dependencies__/__sources__/quik_config/main/quik_config/__dependencies__/__sources__/super_map/: .gitrepo  pyproject.toml
main/pure_python_packager/__dependencies__/__sources__/quik_config/main/quik_config/__dependencies__/__sources__/walk_up/: .gitignore  .gitrepo  .npmignore  Gemfile  README.md  gem.gemspec  package-lock.json  package.json  pyproject.toml
main/pure_python_packager/__dependencies__/__sources__/quik_config/main/quik_config/__dependencies__/__sources__/walk_up/documentation/: setup.md
main/pure_python_packager/__dependencies__/__sources__/quik_config/tests/: basic.py  test_args.py  test_inherit.py
main/pure_python_packager/__dependencies__/__sources__/rigorous_recorder/: .gitrepo  README.md  pyproject.toml
main/pure_python_packager/__dependencies__/__sources__/rigorous_recorder/main/: setup.py
main/pure_python_packager/__dependencies__/__sources__/rigorous_recorder/main/rigorous_recorder/: __init__.py  main.py  settings.json
main/pure_python_packager/__dependencies__/__sources__/rigorous_recorder/main/rigorous_recorder/__dependencies__/__sources__/super_hash/: pyproject.toml
main/pure_python_packager/__dependencies__/__sources__/rigorous_recorder/main/rigorous_recorder/file_system_py/: .gitrepo  pyproject.toml
main/pure_python_packager/__dependencies__/__sources__/rigorous_recorder/main/rigorous_recorder/file_system_py/main/file_system_py/: __init__.py  main.py
main/pure_python_packager/__dependencies__/__sources__/rigorous_recorder/main/rigorous_recorder/file_system_py/run/: tests.ps1
main/pure_python_packager/__dependencies__/__sources__/rigorous_recorder/main/rigorous_recorder/file_system_py/tests/: main.py
main/pure_python_packager/__dependencies__/__sources__/rigorous_recorder/main/rigorous_recorder/super_hash/: .gitrepo  README.md  pyproject.toml
main/pure_python_packager/__dependencies__/__sources__/rigorous_recorder/main/rigorous_recorder/super_hash/main/: setup.py
main/pure_python_packager/__dependencies__/__sources__/rigorous_recorder/main/rigorous_recorder/super_hash/main/super_hash/: __init__.py  main.py
main/pure_python_packager/__dependencies__/__sources__/rigorous_recorder/settings/during_start/: 094_000_jeffs_git_shortcuts.sh
main/pure_python_packager/__dependencies__/__sources__/rigorous_recorder/settings/extensions/python/commands/: ensure_pip_modules
main/pure_python_packager/__dependencies__/__sources__/rigorous_recorder/tests/: experiment_collection.py  record_keeper.py  record_keeper_live_write.py  recorder.py
main/pure_python_packager/__dependencies__/super_map/: pyproject.toml
(+42 files in other folders)
