[tool.poetry]
name = "pure_python_packager"
version = "0.0.1"
description = "Fixing python packaging, one package at a time"
authors=[]

[tool.extra]
author='Jeff Hykin'
author_email='jeff.hykin@gmail.com'
url='https://github.com/jeff-hykin/pure_python_packager'
license = "MIT"

[[tool.extra.pure_python_packager]]
path = "main/pure_python_packager"

[tool.poetry.dependencies]
python = ">=3.7,<3.12"

[tool.poetry.dev-dependencies]
twine = "3.4.1"
"keyrings.alt" = "4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
