[tool.poetry]
name = "super_map"
version = "1.3.2"
description = "Like dict, but easier"
authors=[]

[tool.extra]
author='Jeff Hykin'
author_email='jeff.hykin@gmail.com'
url='https://github.com/jeff-hykin/super_map.git'
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
json-fix = "^0.1.3"

[tool.poetry.dev-dependencies]
twine = "3.4.1"
"keyrings.alt" = "4.0.2"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
