[tool.poetry]
name = "file_system_py"
version = "0.0.11"
description = "All-in-one file manipulation"
authors=[]

[tool.extra]
author='Jeff Hykin'
author_email='jeff.hykin@gmail.com'
url='https://github.com/jeff-hykin/file-system-py'
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6,<3.12"

[tool.poetry.dev-dependencies]
twine = "3.4.1"
"keyrings.alt" = "4.0.2"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
