[tool.poetry]
name = "quik_config"
version = "1.7.0"
description = "Project config files"
authors=[]

[tool.extra]
author='Jeff Hykin'
author_email='jeff.hykin@gmail.com'
url='https://github.com/jeff-hykin/quik_config_python.git'
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
dict-recursive-update = "1.0.1"
super-map = "^1.1.1"
walk-up = "^0.1.0"
ez-yaml = "^1.1.0"
toml = "^0.10.2"
regex = "^2022.3.2"

[tool.poetry.dev-dependencies]
twine = "3.4.1"
"keyrings.alt" = "4.0.2"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
