[tool.poetry]
name = "rigorous_recorder"
version = "1.4.0"
description = "Save everything in a filterable way"
authors=[]

[tool.extra]
author='Jeff Hykin'
author_email='jeff.hykin@gmail.com'
url='https://github.com/jeff-hykin/rigorous_recorder.git'
license = "MIT"
main_module_path = "main/rigorous_recorder"

[tool.poetry.dependencies]
python = ">=3.7,<3.12"

[tool.poetry.dev-dependencies]
twine = "3.4.1"
"keyrings.alt" = "4.0.2"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
